[gd_scene load_steps=36 format=3 uid="uid://628xhc6hv2oe"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_87bu0"]
[ext_resource type="Texture2D" uid="uid://djffunt6no6gc" path="res://white_cell.png" id="1_cpk18"]
[ext_resource type="Theme" uid="uid://lpqot0jjb06i" path="res://theme.tres" id="2_g5r2d"]
[ext_resource type="Script" path="res://mainMenu/CanvasModulate.gd" id="2_kll2d"]
[ext_resource type="Texture2D" uid="uid://nr4nuex501ra" path="res://tiles/grass.png" id="2_u8arq"]
[ext_resource type="Texture2D" uid="uid://cukw6htrxj812" path="res://tiles/MinnMax_2023.png" id="3_ttau1"]
[ext_resource type="Texture2D" uid="uid://dfcsvauo5hqod" path="res://tiles/side_match_path.png" id="4_2w282"]
[ext_resource type="Texture2D" uid="uid://bs1s3p8djeu48" path="res://fire/stones_wood_coals1.png" id="5_1sek2"]
[ext_resource type="Texture2D" uid="uid://4j1yq3j4cidr" path="res://tiles/water_animated/water_animated.png" id="5_och4t"]
[ext_resource type="Texture2D" uid="uid://1q2ds7od5lx" path="res://tiles/water_edge.png" id="6_7faws"]
[ext_resource type="Texture2D" uid="uid://duv80okh2q4av" path="res://fire/flames1.png" id="6_l36r7"]
[ext_resource type="Texture2D" uid="uid://doh0qjsj63voa" path="res://fire/flames2.png" id="7_3rt2w"]
[ext_resource type="Texture2D" uid="uid://bo05bped7j63a" path="res://tiles/trees.png" id="7_h2h6s"]
[ext_resource type="Texture2D" uid="uid://d1e2sl7c6ssmb" path="res://fire/flames3.png" id="8_sgraf"]
[ext_resource type="Texture2D" uid="uid://b46k76apjaf7n" path="res://fire/stones_wood1.png" id="11_fgmt3"]
[ext_resource type="Texture2D" uid="uid://bkd4rcbeu0mb7" path="res://fire/light/fire_light.png" id="17_aocxp"]
[ext_resource type="Script" path="res://PointLight2D.gd" id="18_7kcsc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b4any"]
texture = ExtResource("1_cpk18")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_y36ac"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_b4any")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p2fqf"]
texture = ExtResource("2_u8arq")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_mcpih"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_p2fqf")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8j6pr"]
texture = ExtResource("3_ttau1")
texture_region_size = Vector2i(32, 32)
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
33:4/0 = 0
34:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
33:5/0 = 0
34:5/0 = 0
35:5/0 = 0
36:5/0 = 0
37:5/0 = 0
7:6/0 = 0
8:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
19:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
24:10/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
34:11/0 = 0
6:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
34:12/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
34:13/0 = 0
35:13/0 = 0
36:13/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
28:14/0 = 0
36:14/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
28:15/0 = 0
36:15/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
25:16/0 = 0
28:16/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
28:17/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
25:19/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
25:20/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
19:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
23:21/0 = 0
24:21/0 = 0
25:21/0 = 0
19:22/0 = 0
20:22/0 = 0
21:22/0 = 0
22:22/0 = 0
23:22/0 = 0
24:22/0 = 0
25:22/0 = 0

[sub_resource type="TileSet" id="TileSet_b667h"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_8j6pr")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bq3xo"]
texture = ExtResource("4_2w282")
texture_region_size = Vector2i(32, 32)
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/terrains_peering_bit/bottom_side = 0
8:0/0 = 0
12:0/0 = 0
16:0/0 = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/right_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/left_side = 0
4:1/0/terrains_peering_bit/top_side = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/terrains_peering_bit/left_side = 0
8:1/0 = 0
8:1/0/terrain_set = 0
8:1/0/terrain = 0
8:1/0/terrains_peering_bit/right_side = 0
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/top_side = 0
9:1/0 = 0
11:1/0 = 0
12:1/0 = 0
12:1/0/terrain_set = 0
12:1/0/terrain = 0
12:1/0/terrains_peering_bit/right_side = 0
12:1/0/terrains_peering_bit/left_side = 0
12:1/0/terrains_peering_bit/top_side = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
16:1/0/terrain_set = 0
16:1/0/terrain = 0
16:1/0/terrains_peering_bit/bottom_side = 0
16:1/0/terrains_peering_bit/left_side = 0
16:1/0/terrains_peering_bit/top_side = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:2/0/terrains_peering_bit/top_side = 0
8:2/0 = 0
16:2/0 = 0
0:3/0 = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/bottom_side = 0
1:3/0/terrains_peering_bit/left_side = 0
2:3/0 = 0
10:3/0 = 0
13:3/0 = 0
1:4/0 = 0
4:4/0 = 0
7:4/0 = 0
8:4/0 = 0
8:4/0/terrain_set = 0
8:4/0/terrain = 0
8:4/0/terrains_peering_bit/bottom_side = 0
8:4/0/terrains_peering_bit/left_side = 0
10:4/0 = 0
10:4/0/terrain_set = 0
10:4/0/terrain = 0
10:4/0/terrains_peering_bit/bottom_side = 0
10:4/0/terrains_peering_bit/top_side = 0
12:4/0 = 0
13:4/0 = 0
13:4/0/terrain_set = 0
13:4/0/terrain = 0
13:4/0/terrains_peering_bit/left_side = 0
13:4/0/terrains_peering_bit/top_side = 0
15:4/0 = 0
15:4/0/terrain_set = 0
15:4/0/terrain = 0
15:4/0/terrains_peering_bit/right_side = 0
15:4/0/terrains_peering_bit/bottom_side = 0
16:4/0 = 0
4:5/0 = 0
4:5/0/terrain_set = 0
4:5/0/terrain = 0
4:5/0/terrains_peering_bit/right_side = 0
4:5/0/terrains_peering_bit/top_side = 0
5:5/0 = 0
8:5/0 = 0
10:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/terrain = 0
1:6/0/terrains_peering_bit/right_side = 0
1:6/0/terrains_peering_bit/left_side = 0
2:6/0 = 0

[sub_resource type="TileSet" id="TileSet_57yhk"]
tile_size = Vector2i(32, 32)
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(1, 0.235294, 0.258824, 1)
sources/0 = SubResource("TileSetAtlasSource_bq3xo")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gjvbe"]
texture = ExtResource("5_och4t")
texture_region_size = Vector2i(32, 32)
0:0/animation_columns = 16
0:0/animation_frame_0/duration = 0.25
0:0/animation_frame_1/duration = 0.25
0:0/animation_frame_2/duration = 0.25
0:0/animation_frame_3/duration = 0.25
0:0/animation_frame_4/duration = 0.25
0:0/animation_frame_5/duration = 0.25
0:0/animation_frame_6/duration = 0.25
0:0/animation_frame_7/duration = 0.25
0:0/animation_frame_8/duration = 0.25
0:0/animation_frame_9/duration = 0.25
0:0/animation_frame_10/duration = 0.25
0:0/animation_frame_11/duration = 0.25
0:0/animation_frame_12/duration = 0.25
0:0/animation_frame_13/duration = 0.25
0:0/animation_frame_14/duration = 0.25
0:0/animation_frame_15/duration = 0.25
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_t4tx4"]
tile_size = Vector2i(32, 32)
sources/17 = SubResource("TileSetAtlasSource_gjvbe")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_krgkn"]
texture = ExtResource("6_7faws")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
0:0/0/terrains_peering_bit/bottom_left_corner = 0
0:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/bottom_right_corner = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/bottom_left_corner = 0
0:1/0/terrains_peering_bit/left_side = 0
0:1/0/terrains_peering_bit/top_left_corner = 0
0:1/0/terrains_peering_bit/top_side = 0
1:1/next_alternative_id = 2
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/1 = 1
1:1/1/terrain_set = 0
1:1/1/terrain = 0
1:1/1/terrains_peering_bit/right_side = 0
1:1/1/terrains_peering_bit/bottom_right_corner = 0
1:1/1/terrains_peering_bit/bottom_side = 0
1:1/1/terrains_peering_bit/bottom_left_corner = 0
1:1/1/terrains_peering_bit/left_side = 0
1:1/1/terrains_peering_bit/top_left_corner = 0
1:1/1/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/bottom_right_corner = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_side = 0
2:1/0/terrains_peering_bit/top_right_corner = 0

[sub_resource type="TileSet" id="TileSet_fwe0d"]
tile_size = Vector2i(32, 32)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.92549, 0, 0.0117647, 1)
sources/0 = SubResource("TileSetAtlasSource_krgkn")

[sub_resource type="TileMapPattern" id="TileMapPattern_lok5h"]
tile_data = PackedInt32Array(65536, 65536, 1, 1, 131072, 0, 65537, 131072, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_yqc6k"]
tile_data = PackedInt32Array(0, 131072, 0, 65536, 65536, 1, 1, 131072, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_imny8"]
tile_data = PackedInt32Array(0, 131072, 0, 65536, 65536, 1, 1, 131072, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bb8vj"]
texture = ExtResource("7_h2h6s")
texture_region_size = Vector2i(32, 32)
2:0/next_alternative_id = 3
2:0/0 = 0
2:0/0/probability = 0.5
2:1/0 = 0
2:1/0/probability = 0.25
1:1/0 = 0
1:1/0/probability = 0.25

[sub_resource type="TileSet" id="TileSet_b7jqi"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_bb8vj")
pattern_0 = SubResource("TileMapPattern_lok5h")
pattern_1 = SubResource("TileMapPattern_yqc6k")
pattern_2 = SubResource("TileMapPattern_imny8")

[sub_resource type="SpriteFrames" id="SpriteFrames_or7e0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_l36r7")
}, {
"duration": 1.0,
"texture": ExtResource("7_3rt2w")
}, {
"duration": 1.0,
"texture": ExtResource("8_sgraf")
}],
"loop": true,
"name": &"fire",
"speed": 2.0
}]

[node name="MainMenu" type="Node"]
script = ExtResource("1_87bu0")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
script = ExtResource("2_kll2d")

[node name="Background" type="TileMap" parent="."]
visible = false
modulate = Color(0.396078, 0.396078, 0.396078, 1)
tile_set = SubResource("TileSet_y36ac")
rendering_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 720900, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, 720901, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 720902, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 720903, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, 720905, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 720906, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 720908, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 0, 0, 720909, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 720910, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 0, 0, 16, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, 589840, 0, 0, 655376, 0, 0, 720912, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 0, 0, 655377, 0, 0, 720913, 0, 0, 18, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 655378, 0, 0, 720914, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 0, 327699, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, 589843, 0, 0, 655379, 0, 0, 720915, 0, 0)

[node name="grass" type="TileMap" parent="."]
tile_set = SubResource("TileSet_mcpih")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 589826, 0, 0, 655362, 0, 0, 720898, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 589828, 0, 0, 655364, 0, 0, 720900, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 524293, 0, 0, 589829, 0, 0, 655365, 0, 0, 720901, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 589830, 0, 0, 655366, 0, 0, 720902, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 524295, 0, 0, 589831, 0, 0, 655367, 0, 0, 720903, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 524296, 0, 0, 589832, 0, 0, 655368, 0, 0, 720904, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 524297, 0, 0, 589833, 0, 0, 655369, 0, 0, 720905, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 720906, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 720908, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 524301, 0, 0, 589837, 0, 0, 655373, 0, 0, 720909, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524302, 0, 0, 589838, 0, 0, 655374, 0, 0, 720910, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 524303, 0, 0, 589839, 0, 0, 655375, 0, 0, 720911, 0, 0, 16, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 524304, 0, 0, 589840, 0, 0, 655376, 0, 0, 720912, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393233, 0, 0, 458769, 0, 0, 524305, 0, 0, 589841, 0, 0, 655377, 0, 0, 720913, 0, 0, 18, 0, 0, 65554, 0, 0, 131090, 0, 0, 196626, 0, 0, 262162, 0, 0, 327698, 0, 0, 393234, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 655378, 0, 0, 720914, 0, 0, 19, 0, 0, 65555, 0, 0, 131091, 0, 0, 196627, 0, 0, 262163, 0, 0, 327699, 0, 0, 393235, 0, 0, 458771, 0, 0, 524307, 0, 0, 589843, 0, 0, 655379, 0, 0, 720915, 0, 0)

[node name="details" type="TileMap" parent="."]
tile_set = SubResource("TileSet_b667h")
format = 2

[node name="path" type="TileMap" parent="."]
tile_set = SubResource("TileSet_57yhk")
format = 2

[node name="water" type="TileMap" parent="."]
tile_set = SubResource("TileSet_t4tx4")
format = 2
layer_0/tile_data = PackedInt32Array(589824, 17, 0, 589825, 17, 0, 655360, 17, 0, 720897, 17, 0, 655361, 17, 0, 655362, 17, 0, 655363, 17, 0, 655364, 17, 0, 655365, 17, 0, 655366, 17, 0, 655367, 17, 0, 655368, 17, 0, 655369, 17, 0, 655370, 17, 0, 655371, 17, 0, 720907, 17, 0, 720906, 17, 0, 720905, 17, 0, 720904, 17, 0, 720903, 17, 0, 720902, 17, 0, 720901, 17, 0, 720900, 17, 0, 720899, 17, 0, 720898, 17, 0, 720908, 17, 0, 720909, 17, 0, 720910, 17, 0, 720911, 17, 0, 655375, 17, 0, 655376, 17, 0, 655377, 17, 0, 720912, 17, 0, 720913, 17, 0, 720914, 17, 0, 720915, 17, 0, 655379, 17, 0, 655378, 17, 0, 589842, 17, 0, 589843, 17, 0, 524307, 17, 0, 720896, 17, 0, 655374, 17, 0, 655373, 17, 0, 655372, 17, 0, 589838, 17, 0, 589839, 17, 0, 589840, 17, 0, 589841, 17, 0)

[node name="water_edge" type="TileMap" parent="."]
tile_set = SubResource("TileSet_fwe0d")
format = 2
layer_0/tile_data = PackedInt32Array(458752, 0, 0, 524289, 65536, 1, 589826, 0, 1, 589827, 65536, 1, 589828, 65536, 1, 589836, 131072, 0, 524306, 131072, 1, 458771, 65536, 1, 458770, 131072, 0, 458772, 0, 0, 589830, 65536, 1, 589829, 65536, 1, 524290, 0, 0, 524288, 0, 1, 524287, 131072, 0, 589837, 131072, 1, 524301, 131072, 0, 524302, 65536, 1, 524303, 65536, 1, 524304, 65536, 1, 524305, 65536, 1, 655370, 65536, 1, 655371, 65536, 1, 655372, 131072, 1, 655369, 0, 1, 589832, 65536, 1, 589831, 65536, 1, 589833, 0, 0)

[node name="trees" type="TileMap" parent="."]
tile_set = SubResource("TileSet_b7jqi")
format = 2
layer_0/tile_data = PackedInt32Array(0, 65536, 1, 65537, 65536, 1, 65538, 131072, 0, 65539, 131072, 0, 65540, 131072, 1, 65541, 65536, 1, 65542, 131072, 0, 262145, 131072, 0, 327681, 131072, 1, 196609, 65536, 1, 131073, 131072, 0, 196608, 131072, 0, 4, 131072, 0, 3, 65536, 1, 2, 65536, 1, 1, 131072, 1, 65536, 65536, 1, 131072, 131072, 0, 8, 131072, 1, 9, 131072, 1, 10, 131072, 0, 11, 131072, 1, 12, 131072, 1, 13, 131072, 0, 262162, 131072, 0, 327698, 65536, 1, 327699, 131072, 0, 262163, 65536, 1, 393218, 131072, 1, 458754, 131072, 0, 458753, 131072, 0, 393217, 65536, 1, 327682, 65536, 1, 393216, 131072, 0, 327680, 65536, 1, 327697, 65536, 1, 393232, 131072, 0, 393231, 65536, 1, 393230, 65536, 1, 327696, 65536, 1, 327695, 65536, 1, 393229, 131072, 0, 65550, 131072, 0, 65551, 131072, 0, 65552, 131072, 0, 65553, 131072, 1, 65554, 131072, 1, 65555, 65536, 1, 131091, 131072, 1, 131090, 131072, 0, 196626, 131072, 1, 15, 131072, 0, 16, 131072, 1, 17, 131072, 1, 18, 131072, 1, 262146, 131072, 0, 327683, 65536, 1, 393219, 131072, 0, 393220, 131072, 1, 458756, 131072, 1, 458755, 65536, 1, 524292, 131072, 0, 458768, 131072, 1, 458769, 131072, 1, 393233, 131072, 0, 393234, 65536, 1, 7, 65536, 1)

[node name="Label" type="Label" parent="."]
offset_left = 96.0
offset_top = 32.0
offset_right = 544.0
offset_bottom = 128.0
theme = ExtResource("2_g5r2d")
theme_override_font_sizes/font_size = 32
text = "Walking 
Simulator Simulator Simulator"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = 448.0
offset_top = 288.0
offset_right = 624.0
offset_bottom = 368.0
theme = ExtResource("2_g5r2d")
theme_override_font_sizes/font_size = 18
text = "Created by Richard
in San Francisco
for MinnHax 2023"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Label4" type="Label" parent="."]
offset_left = 16.0
offset_top = 272.0
offset_right = 192.0
offset_bottom = 368.0
theme = ExtResource("2_g5r2d")
theme_override_font_sizes/font_size = 18
text = "Controls
WASD or Arrow Keys to move.
Space or Enter to advance dialogue. "
vertical_alignment = 2

[node name="fire" type="Node2D" parent="."]
position = Vector2(320, 160)

[node name="stones_wood" type="Sprite2D" parent="fire"]
position = Vector2(-3, -7)
texture = ExtResource("11_fgmt3")

[node name="stones_wood_coals" type="Sprite2D" parent="fire"]
visible = false
position = Vector2(-3, -7)
texture = ExtResource("5_1sek2")

[node name="flames" type="AnimatedSprite2D" parent="fire"]
visible = false
position = Vector2(-2, -6)
sprite_frames = SubResource("SpriteFrames_or7e0")
animation = &"fire"
frame = 1
frame_progress = 0.464789

[node name="PointLight2D" type="PointLight2D" parent="fire"]
visible = false
energy = 0.0
texture = ExtResource("17_aocxp")
script = ExtResource("18_7kcsc")

[node name="Button" type="Button" parent="."]
offset_left = 256.0
offset_top = 192.0
offset_right = 384.0
offset_bottom = 224.0
theme = ExtResource("2_g5r2d")
text = "Start Game"

[node name="Button2" type="Button" parent="."]
offset_left = 256.0
offset_top = 240.0
offset_right = 384.0
offset_bottom = 272.0
theme = ExtResource("2_g5r2d")
text = "More Info"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
